# Pressfield

./: ARC2-HANDOFF.md  CLAUDE.md  IMPLEMENTATION-PLAN.md  IMPLEMENTATION-ROADMAP.md  README.md  RELEASE-READINESS.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  progress.json  tests.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: SECURITY.md
scripts/: notarize-release.sh
specs/: arc2-hardcore.md  phase-0-validation.md  phase-1-validation.md  phase-2-validation.md  phase-3-validation.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  decay.rs  error.rs  idle_timer.rs  lib.rs  main.rs  schema.sql  session_store.rs
src/__tests__/: decay.test.ts  decayMath.test.ts  destruction.test.ts  fuzzyFilter.test.ts  ipcTypes.test.ts  settingsPanel.test.tsx  statsPanel.test.ts  textIntegrity.test.ts  useTheme.test.ts  wordBoxes.test.ts  wordCount.test.ts
src/canvas/: decay.ts  wordBoxes.ts
src/components/: DecayCanvas.tsx  DocumentPalette.tsx  Editor.tsx  SettingsPanel.tsx  StatsPanel.tsx
src/hooks/: useActiveDocument.ts  useAutosave.ts  useDecayEvents.ts  useHardcoreBites.ts  useSessionStats.ts  useTheme.ts
src/styles/: app.css  palette.css
src/types/: ipc.ts
src/utils/: decayMath.ts  destruction.ts  fuzzyFilter.ts  wordCount.ts
